# ChangeLog for dev-lang/clojure-contrib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*clojure-contrib-1.0.0.99999999 (07 Nov 2009)
*clojure-contrib-1.0.0.20091102 (07 Nov 2009)

  07 Nov 2009; Daniel Solano Gómez <gentoo@sattvik.com>
  +clojure-contrib-1.0.0.20091102.ebuild,
  +clojure-contrib-1.0.0.99999999.ebuild, +metadata.xml:
  Added new dev-lang/clojure-contrib package.
