@@ -1,6 +1,6 @@
-DIST clojure-contrib-1.0.0_rc1.zip 879308 RMD160 5bc191cc9c083ece6d661722dd47c1c803f9092f SHA1 13d7783b8a315934e76358df102dc4b4615b7faf SHA256 24db88f88923e99c977f1f6b7c80a6e47fe85a3a39b7e877150c017d9c35aff5
-DIST clojure-contrib-1.1.0_rc2.zip 428370 RMD160 82a0f5e3e0959023f515cfc3c57f90d78af71e22 SHA1 fd84a6bac2dbafc8b558445ff1e152475040de2a SHA256 e11bd1f9d91aad9e4d44c04c3ae93374df5c993b7a7571d1f92b9a55451fe0d4
-EBUILD clojure-contrib-1.0.0_rc1.ebuild 724 RMD160 f17e3f72c05b48a8d81bc024b949c38afb3429d8 SHA1 9054373bec735b33e26a79db4543d5d825e3d9d1 SHA256 82c0d5fe31141732a7018a1a6fe6d13aa00bbe3fce3a824eb8431d30273cca92
-EBUILD clojure-contrib-1.1.0_rc2.ebuild 726 RMD160 984af1817d241ca0bc074dd0d14cef91196fe82b SHA1 14c20b8b78f0b451ece9a5f1272d0b3f01fa6c15 SHA256 59c031b671199608b6cfcb162083827647d2474fc4e56c3c27062b4f692c76f3
-MISC ChangeLog 421 RMD160 df8b201a99617f0e0cb59f9abc7c2c701eb11786 SHA1 25f0907c31a1404b9b30e8760db581d68200c917 SHA256 4170c97ae76c2a8d61aaf7e4589b25920ece015477deef26be7b36ed266dced0
+DIST clojure-contrib-1.0.0.zip 3698861 RMD160 24c2357547e8dc6a1d5878f06bddd2c76b8cac51 SHA1 dbf978d0368d9b2984fbad67034650d037ecb831 SHA256 77c8a8070c2bb8b83888a49ab77fa91bef533417e10f51a17218898e569e7091
+DIST clojure-contrib-1.1.0.zip 3631433 RMD160 dfa3d6887c91cc25e05e35a219aaf088caa51063 SHA1 841194998a07294f1050f26534f68efca86fe094 SHA256 0aab7c3f289f1de21b66330b9f148ae28655f05b245896b4d4c5902d1891773f
+EBUILD clojure-contrib-1.0.0.ebuild 536 RMD160 a6ef6cf1230281721c34eea7f64b436a8cea6f7d SHA1 f951e07f430f1035d56b1f178999f6851baaf136 SHA256 34cebf4b5aabd601d36765a6e19a3003c29aa298e42c4a33f168520f3be76e95
+EBUILD clojure-contrib-1.1.0.ebuild 538 RMD160 cb9b941ea68a6d8e20b9df409b0dc78ffa253b67 SHA1 fbc26afba4ddb55af6f235df9079123e65acd634 SHA256 0bdd5fa5506461be678eec99d2d4609164af78d0a07b5d1a46f415cedbdf4b6d
+MISC ChangeLog 716 RMD160 759d8fdbe752572b9a801d216af4c638583649fd SHA1 fe32453dcbf2c35aa5146bfd385a80f7016346a0 SHA256 e29ba8515aebc3384f31f77ce4e61df320562e384d40def65a6e4e07576d2327
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
