@@ -1,6 +1,14 @@
 # ChangeLog for dev-lang/clojure-contrib
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*clojure-contrib-1.1.0 (08 Mar 2010)
+*clojure-contrib-1.0.0 (08 Mar 2010)
+
+  08 Mar 2010; Daniel Solano Gómez <gentoo@sattvik.com>
+  -clojure-contrib-1.0.0_rc1.ebuild, +clojure-contrib-1.0.0.ebuild,
+  -clojure-contrib-1.1.0_rc2.ebuild, +clojure-contrib-1.1.0.ebuild:
+  Bump to final releases.
 
 *clojure-contrib-1.0.0.99999999 (07 Nov 2009)
 *clojure-contrib-1.0.0.20091102 (07 Nov 2009)
